# image-sorting-tool

./: .pre-commit-config.yaml  .pylintrc  .yamllint  Jenkinsfile  LICENSE  README.md  image_sorting_tool.py  pyproject.toml  renovate.json5  requirements.txt  setup.py  tox.ini
.github/workflows/: python-publish.yml  python-test.yml
image_sorting_tool/: __init__.py  __main__.py  gui.py  image_sort.py
image_sorting_tool/tests/: __init__.py  test_gui.py  test_image_sort.py  test_main.py
src/: __main__.py  main.py
